--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # MkDocs configuration for default Material-themed build
 INHERIT: mkdocs-base.yml
 
-site_url: https://docs.percona.com/pmm-dump/
+site_url: https://docs.percona.com/pmm-dump-documentation/
 
 plugins:
   section-index: {}
