--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -143,6 +143,7 @@ nav:
           
     - Release Notes:
           - "Release notes index": ReleaseNotes/index.md
+          - "PMM Dump 0.6.4-rc (2023-06-30)": ReleaseNotes/PMM-Dump-0.6.4-rc.md
           - "PMM Dump 0.6.3-rc (2023-05-04)": ReleaseNotes/PMM-Dump-0.6.3-rc.md
           - "PMM Dump 0.6.2-rc (2023-03-08)": ReleaseNotes/PMM-Dump-0.6.2-rc.md
           - "PMM Dump 0.6.1-rc (2022-07-01)": ReleaseNotes/PMM-Dump-0.6.1-rc.md
