--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -98,8 +98,8 @@ markdown_extensions:
     custom_checkbox: true
   pymdownx.snippets:
       base_path: ["snippets"]
-      auto_append:
-        - services-banner.md
+#      auto_append:
+#        - services-banner.md
   pymdownx.highlight:
     use_pygments: true
   pymdownx.emoji:
@@ -155,6 +155,7 @@ extra: # Used in main.html template and can't be externalized
 nav:
 
     - Welcome: index.md
+    - get-help.md
     - Getting started:
           - "System requirements": "requirements.md"
           - "Installation": installation.md
