--- a/mkdocs-base.yml
+++ b/mkdocs-base.yml
@@ -47,7 +47,7 @@ theme:
     - search.highlight
     - content.code.copy
     - content.action.view
-    - content.action.edit
+#    - content.action.edit
     - content.tabs.link
     - navigation.top
     - navigation.tracking
@@ -76,7 +76,7 @@ markdown_extensions:
   toc:
     permalink: true
     title: On this page
-    toc_depth: 3
+    toc_depth: 2
   md_in_html: {}
   admonition: {}
   footnotes: {}
