--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ mkdocs-section-index
 mkdocs-htmlproofer-plugin
 mkdocs-meta-descriptions-plugin
 mike
+mkdocs-git-committers-plugin-2
 fonttools>=4.43.0 # not directly required, pinned by Snyk to avoid a vulnerability
 pillow>=10.3.0 # not directly required, pinned by Snyk to avoid a vulnerability
 requests>=2.32.2 # not directly required, pinned by Snyk to avoid a vulnerability
